Create app folder and start routes

--- a/client/pages/appointments.html
+++ b/client/pages/appointments.html
@@ -1,7 +1,7 @@
 <div class="appointments-container">
   <section class="appointments-credits">
     <h3>Créditos: </h3>
-    <div class="alert alert-primary buthidden" id="creditsMessage" role="alert">
+    <div class="alert alert-primary element-hidden" id="creditsMessage" role="alert">
       Sem créditos disponíveis.
     </div>
     <div class="appointments-credits--display" id="creditsDisplay">
@@ -30,7 +30,7 @@
   
     </form>
     <form class="appointments-new--display" id="appointmentNewForm">
-      <div class="alert alert-primary buthidden" id="availabilityMessage" role="alert">
+      <div class="alert alert-primary element-hidden" id="availabilityMessage" role="alert">
         Sem horários disponíveis para a seleção.
       </div>
       <div id="appointmentNewList">
@@ -42,7 +42,7 @@
   </section>
   <section class="appointments-list">
     <h3>Agendamentos:</h3>
-    <div class="alert alert-primary buthidden" id="appointmentsMessage" role="alert">
+    <div class="alert alert-primary element-hidden" id="appointmentsMessage" role="alert">
       Sem agendamentos programados.
     </div>
     <div class="appointments-list--filter">
