--- a/client/index.html
+++ b/client/index.html
@@ -68,7 +68,7 @@
 
       <nav class="header--nav-user">
         <ul>
-          <li>
+          <li id="userRegistration">
             <button
               data-nav-target="registration"
               type="button"
@@ -77,7 +77,7 @@
               Registrar
             </button>
           </li>
-          <li>
+          <li id="userLogin">
             <button
               data-nav-target="login"
               type="button"
@@ -86,18 +86,18 @@
               Entrar
             </button>
           </li>
-          <li>
+          <li id="userProfile">
             <a
               data-nav-target="profile"
-              class="nav--user-logged nav-page"
+              class="nav--user-logged nav-page element-hidden"
               href="#"
               ><i class="fa-solid fa-user"></i> <span>Nome usuário</span></a
             >
           </li>
-          <li>
+          <li id="userCart">
             <a
               data-nav-target="cart"
-              class="nav--user-cart nav-page"
+              class="nav--user-cart nav-page element-hidden"
               href="#"
               ><i class="fa-solid fa-cart-shopping"></i
             ></a>
@@ -185,6 +185,8 @@
         </ul>
       </nav>
     </footer>
+
+    <!--Cookie consent--> 
     <div id="cookieConsent" class="cookie-consent">
       <p>
         Esta website utiliza cookies e tecnologias semelhantes para melhorar sua
@@ -193,5 +195,18 @@
       </p>
       <button id="acceptCookies">OK</button>
     </div>
+
+    <!--Toast for alert--> 
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <div id="toastAlert" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <strong class="me-auto" id="alertTitle"></strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body" id="alertMessage">
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
