--- a/client/index.html
+++ b/client/index.html
@@ -76,14 +76,14 @@
                     Entrar
                   </button>
                 </li>
-                <li id="userProfile">
-                  <a data-nav-target="profile" class="nav--user-logged nav-page element-hidden" href="#" >
+                <li id="userProfile" class="element-hidden">
+                  <a data-nav-target="profile" class="nav--user-logged nav-page" href="#" >
                     <i class="fa-solid fa-user"></i>
-                    <span>Nome usuário</span>
+                    <span id="userProfileName">Nome usuário</span>
                   </a>
                 </li>
-                <li id="userCart">
-                  <a data-nav-target="cart" class="nav--user-cart nav-page element-hidden" href="#">
+                <li id="userCart" class="element-hidden">
+                  <a data-nav-target="cart" class="nav--user-cart nav-page" href="#">
                     <i class="fa-solid fa-cart-shopping"></i>
                   </a>
                 </li>
@@ -156,10 +156,10 @@
         <div id="cookieConsent" class="cookie-consent">
             <p>
               Esta website utiliza cookies e tecnologias semelhantes para melhorar sua
-              navegação. Ao continuar navegando você concorda com a nossa Política de
+              navegação. <br>Ao continuar navegando você concorda com a nossa Política de
               Privacidade.
             </p>
-            <button id="acceptCookies">OK</button>
+            <button id="acceptCookies" class="btn btn-primary">OK</button>
         </div>
           
         <!--Toast for alert--> 
