Making file MVC functional

--- a/client/pages/files.html
+++ b/client/pages/files.html
@@ -7,7 +7,7 @@
   <section class="files-upload">
     <h2>Carregar arquivo:</h2>
     <form id="uploadFileForm">
-      <button type="file" id="inputUploadFileSelect" name="file" class="btn btn-outline-primary">
+      <button type="button" id="inputUploadFileSelect" name="file" class="btn btn-outline-primary">
         Escolher arquivo
       </button>
       <label for="inputUploadFileLabel" class="form-label">Descrição:</label>
