--- a/client/index.html
+++ b/client/index.html
@@ -60,7 +60,7 @@
         <header class="header-container">
             <div class="header--logo">
               <a href="#" data-nav-target="home" class="nav-page">
-                <img src="./assets/images/logo-white.png" alt="Logo" style="width: 130px; height: 50px" />
+                <img src="./assets/logo/logo-white.png" alt="Logo" style="width: 130px; height: 50px" />
               </a>
             </div>
           
@@ -133,7 +133,7 @@
         <footer class="footer-container">
             <div class="footer--logo">
               <a href="#" data-nav-target="home" class="nav-page">
-                <img src="./assets/images/logo-dark.png" alt="Logo" style="width: 130px; height: 50px" />
+                <img src="./assets/logo/logo-dark.png" alt="Logo" style="width: 130px; height: 50px" />
               </a>
             </div>
             <div class="footer--contact">
