Functioning services page and start of cart in offcanvas

--- a/client/index.html
+++ b/client/index.html
@@ -174,5 +174,17 @@
             </div>
         </div>
 
+        <!-- OffCanvas for Cart -->
+        <div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1" id="offCanvasCart" aria-labelledby="offCanvasCartLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offCanvasCartLabel">Carrinho</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body" id="offCanvasCartBody">
+            <!-- Automatic load content here -->
+          </div>
+        
+        </div>
+
     </body>
 </html>
