Remaking services view including single and combo products

--- a/client/index.html
+++ b/client/index.html
@@ -153,13 +153,15 @@
         </footer>
           
         <!--Cookie consent--> 
-        <div id="cookieConsent" class="cookie-consent">
+        <div id="cookieConsent">
+          <div class="cookie-consent">
             <p>
               Esta website utiliza cookies e tecnologias semelhantes para melhorar sua
               navegação. <br>Ao continuar navegando você concorda com a nossa Política de
               Privacidade.
             </p>
             <button id="acceptCookies" class="btn btn-primary">OK</button>
+          </div>
         </div>
           
         <!--Toast for alert--> 
