Finish services page

--- a/client/pages/services.html
+++ b/client/pages/services.html
@@ -34,12 +34,12 @@
                 </select>
             </div>
               
-            <button type="submit" class="btn btn-primary">Adquirir</button>
+            <button type="submit" class="btn btn-primary" id="buttonSingleService">Adquirir</button>
         </form>
     </section>
 
     <section class="services-combos">
-        <h3>Combos e promoções:</h3>
+        <h2>Combos e promoções:</h2>
         <div class="services-combos--filter">
             <label for="inputComboFilter" class="form-label">Filtrar por local:</label>
             <select name="inputComboFilter" class="form-select" id="inputComboLocationFilter">
