Refactoring the application view and controller

--- a/client/pages/contact.html
+++ b/client/pages/contact.html
@@ -13,12 +13,19 @@
       <a href="mailto:contato@clinicaolimpo.com">contato@clinicaolimpo.com</a>
     </li>
   </ul>
-  <div>
-    <form class="contact-form">
-      <label for="email">Seu e-mail:</label>
-      <input type="email" id="email" />
-      <label for="message">Escreva sua mensagem:</label>
-      <input type="text" id="message" />
+
+    <form id="userContactForm">
+      <div class="mb-3">
+        <label for="userContactEmail" class="form-label">Seu e-mail:</label>
+        <input type="email" id="userContactEmail" />
+      </div>
+      <div class="mb-3">
+        <label for="userContactMessage" class="form-label">Escreva sua mensagem:</label>
+        <input type="text" id="userContactMessage" />
+      </div>
+      <div class="mb-3">
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </div>
     </form>
-  </div>
+  
 </div>
