Add and remove from cart

--- a/client/pages/navigation.html
+++ b/client/pages/navigation.html
@@ -24,7 +24,7 @@
           </a>
         </li>
         <li id="userCart" class="element-hidden">
-          <a data-nav-target="cart" class="nav--user-cart navigation-page" href="#">
+          <a class="nav--user-cart" href="#">
             <i class="fa-solid fa-cart-shopping"></i>
           </a>
         </li>
