Start user handling

--- a/client/index.html
+++ b/client/index.html
@@ -100,5 +100,20 @@
             </div>
           </div>
         </div>
+
+        <!-- Modal for registration and login -->
+        <div class="modal fade" id="staticModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticModalLabel"></h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="staticModalClose"></button>
+              </div>
+              <div class="modal-body" id="staticModalArea">
+                <!-- Automatic load content here -->
+              </div>
+            </div>
+          </div>
+        </div>
     </body>
 </html>
