--- a/client/pages/navigation.html
+++ b/client/pages/navigation.html
@@ -8,7 +8,7 @@
     <nav class="navigation--nav-user">
       <ul>
         <li id="userRegistration">
-          <button data-nav-target="registration" type="button" class="btn btn-primary nav--user-register navigation-page">
+          <button data-nav-target="register" type="button" class="btn btn-primary nav--user-register navigation-page">
             Registrar
           </button>
         </li>
