Changes in small device css

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,6 +1,6 @@
 <div class="footer-container">
     <div class="footer--logo">
-      <a href="#" data-nav-target="home" class="nav-page">
+      <a href="#" data-nav-target="home" class="navigation-page">
         <img src="./assets/logo/logo-dark.png" alt="Logo" style="width: 130px; height: 50px" />
       </a>
     </div>
@@ -14,7 +14,7 @@
     <nav class="footer--nav">
       <ul>
         <li>
-          <a href="#" data-nav-target="terms" class="nav-page">Termos e Condições</a>
+          <a href="#" data-nav-target="terms" class="navigation-page">Termos e Condições</a>
         </li>
       </ul>
     </nav>
