Begin user registration page

--- a/pages/login.html
+++ b/pages/login.html
@@ -10,6 +10,11 @@
     </form>
   </section>
 
+  <section class="login--others">
+    <a href="#">Esqueci minha senha</a>
+    <a href="#" data-nav-target="register" class="navigation-page">Registrar</a>
+  </section>
+
   <div class="alert alert-primary element-hidden" id="userLoginFailMessage" role="alert">
     Usuário ou senha incorretos.
   </div>
