Solve multiple calls to navigation

--- a/pages/files.html
+++ b/pages/files.html
@@ -1,7 +1,7 @@
 <div class="files-container">
 
   <div class="alert alert-primary element-hidden" id="userLoggedMessage" role="alert">
-    Você precisa estar conectado com seu usuário para fazer agendamentos. Faça o login <a href="#">aqui</a>.
+    Você precisa estar conectado com seu usuário para carregar e visualizar os arquivos. Faça o login <a href="#">aqui</a>.
   </div>
 
   <section class="files-upload">
