Improving the user experience for user controller

--- a/pages/login.html
+++ b/pages/login.html
@@ -16,15 +16,6 @@
   </section>
 
   <div class="alert alert-primary element-hidden" id="userLoginFailMessage" role="alert">
-    Usuário ou senha incorretos.
+    Não foi possível conectar o usuário.
   </div>
-
-  <!-- <section class="login--external">
-    <button id="google-login-btn" class="btn btn-primary" data-onsuccess="onGoogleSignIn">
-      Login com Google
-    </button>
-    <button id="facebook-login-btn" class="btn btn-primary" onclick="facebookLogin()">
-      Login com Facebook
-    </button>
-  </section> -->
 </div>
