Improvements in the user API

--- a/pages/forgotpassword.html
+++ b/pages/forgotpassword.html
@@ -1,25 +1,14 @@
 <div class="recover-container">
     <h2>Esqueci minha senha</h2>
     <section class="recover--username">
-        <form class="recover--forms" id="coverRecoverForm">
+        <form class="recover--forms" id="userRecoverForm">
             <label for="userRecoverName" class="form-label">Nome de usuário:</label>
             <input type="text" id="userRecoverName" placeholder="Nome de usuário" class="form-control" required/>
-            <button type="submit" class="btn btn-primary" id="codeSubmitButton">Gerar Código</button>
-        </form>
-        <form class="recover--forms" id="userRecoverForm"></form>
-            <label for="userRecoverCode" class="form-label">Código:</label>
-            <input type="text" id="userRecoverCode" placeholder="Código" class="form-control" required/>
-            <label for="userRecoverPassword" class="form-label">Nova senha:</label>
-            <input type="password" id="userRecoverPassword" placeholder="Senha" class="form-control" required/>
-            <div name="inputHelp" id="userRecoverPasswordRules" class="form-text element-hidden">Deve conter no mínimo 6 caracteres.<br>
-                Deve conter no mínimo: <br> - 1 letra maiúscula, <br> - 1 letra minúscula, <br> - 1 número, <br> - 1 caractere especial. </div>
-            <label for="userRecoverConfirmPassword" class="form-label">Confirme a senha:</label>
-            <input type="password" id="userRecoverConfirmPassword" placeholder="Senha" class="form-control" required/>
             <button type="submit" class="btn btn-primary" id="generateSubmitButton">Alterar Senha</button>
         </form>
     </section>
   
     <div class="alert alert-primary element-hidden" id="userRecoverFailMessage" role="alert">
-        Não foi possível alterar senha do usuário.
+        Não foi possível solicitar alteração de senha do usuário.
     </div>
 </div>
