Partial conclusion of users api

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -39,7 +39,7 @@
     </section>
     <section class="profile--others">
         <a href="#" id="userProfilePassword">Mudar senha</a>
-        <a href="#" id="userProfileDelete">Deletar usuário</a>
+        <span></span>
       </section>
 
     <div class="alert alert-primary element-hidden" id="userProfileFailMessage" role="alert">
