--- a/pages/files.html
+++ b/pages/files.html
@@ -6,13 +6,11 @@
 
   <section class="files-upload">
     <h2>Carregar arquivo:</h2>
-    <form id="uploadFileForm">
+    <form id="uploadFileForm" enctype="multipart/form-data">
       <label for="inputUploadFileLabel" class="form-label">Descrição:</label>
       <input type="text" class="form-control" placeholder="Descrição do arquivo" 
       id="inputUploadFileLabel" aria-label="fileLabel" aria-describedby="basic-addon1"/>
-      <button type="button" id="inputUploadFileSelect" name="file" class="btn btn-outline-primary">
-        Escolher arquivo
-      </button>
+      <input class="form-control" type="file" name="inputUploadFileSelect" id="inputUploadFileSelect">
       <button type="submit" class="btn btn-outline-primary">
         <i class="fa-solid fa-upload"></i>
       </button>
